Fixed spacing

--- a/style.css
+++ b/style.css
@@ -96,8 +96,8 @@ section {
   background-color: white;
 }
 
-li {
-  padding-top: 15px;
+p ul {
+  padding-bottom: 15px;
 }
 
 @media (min-width:992px)
